# leetgpu-challenges

./: CMakeLists.txt  Makefile  README.md
easy/vector-addition/: serial.cpp
include/: time.hpp  utils.hpp
src/easy/leaky-relu/: README.md  serial.cpp  sycl.cpp
src/easy/matrix-multiplication/: serial.cpp
src/easy/relu/: README.md  cuda.cu  serial.cpp  sycl.cpp
src/easy/vector-addition/: README.md  cuda.cu  parallel.cu  serial.cpp  sycl.cpp
templates/: serial.cpp  sycl.cpp  template.cu
